# acsv2

./: .gitignore  manage.py  requirements.txt
.github/workflows/: codeql-analysis.yml  django-security-check.yml
acs/: auth.py  settings.py  urls.py  wsgi.py
backend/: .dockerignore  build-docker.sh  requirements.txt  update.sh
backend/acs/: asgi.py  auth.py  context_processors.py  settings.py  urls.py
backend/docker/: Dockerfile  nginx.default  start-server.sh
backend/logs/: admin.py  api_urls.py  api_views.py  models.py  views.py
backend/logs/migrations/: 0001_initial.py  0002_log_user.py  0004_auto_20210816_1820.py  0005_rename_user_log_user_id.py  0006_alter_log_stamp.py  0007_rename_machine_log_machine_id.py  0008_rename_machine_id_log_machine.py
backend/machines/: admin.py  api_urls.py  api_v2_urls.py  api_v3_urls.py  api_v4_urls.py  api_views.py  apps.py  models.py
backend/machines/migrations/: 0002_machine_user.py  0003_alter_machine_apitoken.py  0004_remove_machine_user.py
backend/members/: admin.py  models.py
backend/members/migrations/: 0002_member_card_id.py  0003_member_machine.py
backend/synch/: cards.py  flapi.py  foreninglet.yml  machines.py  updater.py  user_machines.py
backend/templates/admin/: base_site.html
backend/templates/static_pages/: index.html
backend/unknown_cards/: admin.py  apps.py
backend/unknown_cards/migrations/: 0001_initial.py
barn/case/: bottom.py  defs.py  dispsupport.py  opi.py  orangepizero.py  standoff.py  standoffs.py  top.py  wallfitting1.py  wallfitting2.py
barn/pcb/hat/: fp-info-cache  fp-lib-table  hat.kicad_pcb  hat.kicad_prl  hat.kicad_pro  hat.kicad_sch  sym-lib-table
barn/src/: bacs.service  bacs.sh  display.py  gateway.py  main.py  packages.txt  requirements.txt  rest.py  rfidreader.py  slack.py
barn/src/door/: barndoor.service  main.py
barn/src/woodshop/: bacs.service  main.py
camcontrol/case/: adapter.py  bottom.py  defs.py  ledcover.py  psucover.py  standoff.py  standoffs.py  top.py  wallfitting2.py
camcontrol/esp32/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
camcontrol/esp32/main/: CMakeLists.txt  console.cpp  console.h  defs.h  display.cpp  display.h  format.cpp  format.h  gateway.cpp  gateway.h  gpio.cpp  gpio.h  http.h  hw.cpp  hw.h  led.cpp  logger.cpp  logger.h  main.cpp  mqtt.cpp  mqtt.h  nvs.cpp  nvs.h  otafwu.cpp  slack.cpp  slack.h  util.cpp  util.h
camcontrol/esp8266/: CMakeLists.txt  sdkconfig
camcontrol/esp8266/components/: CMakeLists.txt
camcontrol/esp8266/main/: CMakeLists.txt  connect.cpp  connect.h  eventhandler.cpp  eventhandler.h  gateway.cpp  gateway.h  gpio.cpp  gpio.h  led.cpp  led.h  main.cpp
docker/: nginx.default
frontend/case/: bottom.py  bottom.step  dccover.py  defs.py  orangepizero.py  standoffs.py  teststand-display.py  top.py  usbcover.py  wallfitting2.py
frontend/design/: states.plantuml
frontend/esp32/: CMakeLists.txt  dockerbuild.sh  flash.sh  flash_all.sh  log.frontend.20260607125645.txt  log.frontend.20260607160631.txt  partitions.csv  sdkconfig  sdkconfig.old  test.py
frontend/esp32/idf-diag-13b604ab-44e5-482b-9a1e-9bf0ae55e573/: platform.inf
frontend/esp32/log/: idf_py_stderr_output_129262  idf_py_stderr_output_133580  idf_py_stdout_output_129262  idf_py_stdout_output_133580
frontend/esp32/main/: CMakeLists.txt  buttons.cpp  buttons.h  cardcache.cpp  cardcache.h  cardreader.cpp  cardreader.h  connect.cpp  connect.h  console.cpp  console.h  controller.cpp  controller.h  defines.h  defs.h  display.cpp  display.h  foreninglet.cpp  foreninglet.h  format.cpp  gateway.cpp  gateway.h  http.cpp  http.h  hw.cpp  hw.h  idf_component.yml  lock.h  logger.cpp  logger.h  main.cpp  mqtt.cpp  mqtt.h  nvs.cpp  nvs.h  otafwu.cpp  otafwu.h  rs485.cpp  rs485.h  slack.cpp  (+5 more)
frontend/hw/display/: display.kicad_pcb  display.kicad_prl  display.kicad_pro  display.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
frontend/hw/interface/: fp-info-cache  fp-lib-table  interface.kicad_pcb  interface.kicad_prl  interface.kicad_pro  interface.kicad_sch  sym-lib-table
frontend/mqtt-bridge/: MQTT_BROKER_BRIDGE_README.md  README.md  mqtt_broker_bridge.py  pyproject.toml
frontend/opi/: CMakeLists.txt  buttons.cpp  buttons.h  cardcache.cpp  cardcache.h  cardreader.cpp  cardreader.h  controller.cpp  controller.h  cplibs.sh  display.cpp  display.h  foreninglet.cpp  foreninglet.h  frontend.service  gateway.cpp  gateway.h  gen-dev.sh  gen-ninja.sh  gpiodemo.cpp  installed-packages.txt  lock.cpp  lock.h  logger.cpp  logger.h  main.cpp  mkliblinks.sh  packages.txt  read-only-fs.txt  serial.cpp  serial.h  serialib.cpp  serialib.h  sethome.sh  setremote.sh  setspace.sh  slack.cpp  slack.h  test.cpp  test.h  (+2 more)
frontend/opi/crosstools/: .config
frontend/pcb/: fp-info-cache  fp-lib-table  frontend.kicad_pcb  frontend.kicad_prl  frontend.kicad_pro  frontend.kicad_sch
include/: RDM6300.h
logs/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  urls.py  views.py
logs/migrations/: 0001_initial.py  0003_rename_text_log_message.py
machines/: admin.py  api_urls.py  api_views.py  apps.py  models.py
machines/migrations/: 0001_initial.py  0002_machine_user.py  0003_alter_machine_user.py
members/: admin.py  models.py
members/migrations/: 0001_initial.py
mqtt-logger/: Dockerfile  README.md  build-docker.sh  main.py  mqtt_logger.py  my-logrotate.conf  pyproject.toml  service.sh  wrapper.sh
reader/box/: bottom.py  door-cq-bot.py  door-cq.py  door-small-bot.py  door-small-top.py  door-small.py  door.py  door_defs.py  door_defs_small.py  led-spacer.py
reader/test/: flashtest.py
synch/: flapi.py  machines.py  updater.py  users.py
templates/static_pages/: index.html
ui/: acs-ui.service  cardreader.py  cardreader.rb  fixports.sh  gateway.rb  idf_monitor.py  init.rb  slack.py  slack.rb  states.plantuml  ui.rb  ui.sh  utils.py  utils.rb
unknown_cards/: admin.py  api_urls.py  api_views.py  apps.py  models.py
unknown_cards/migrations/: 0002_rename_unknowncards_unknowncard.py  0003_alter_unknowncard_stamp.py
(+1833 files in other folders)
